# petro-agent

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  blueprinter.md
.claude/hooks/: session-start-context.sh  statusline.sh  stop-suggest-checkpoint.sh
.claude/rules/: code-style.md  doc-enforcement.md  docs-style.md  learning-style.md  memory-policy.md  planning-format.md  project-guidelines.md  verification.md
.claude/scripts/: promptloop.sh
aprendizaje/: 01_disponibilidad_curvas_vintage_moderno.md  02_ecuaciones_core_petrofisica.md
documentation/sample_reports/: 15-135-24881-00-00_ledger.json  field_report.md  (+6 more)
planning/: AUTONOMOUS_RUN.md  DECISIONS.md  ESTADO.md  PLAN.md  VISION_AGENTE_ANALISTA.md  auditoria_fuga_interpretacion.md  auditoria_mejoras_2026-06-25.md  informe_preform.md  unificacion.md
src/: __init__.py
tests/: test_agents.py  test_analyst.py  test_analyst_loop.py  test_client.py  test_completeness_and_filler.py  test_eda.py  test_electrofacies.py  test_evaluation.py  test_evaluation_v2.py  test_field_report.py  test_lithology.py  test_loader.py  test_log_plot.py  test_loop_actions.py  test_methodology_graph.py  test_netpay.py  test_orchestrator.py  test_params.py  test_permeability.py  test_phie.py  test_qc.py  test_registry.py  test_report_compose.py  test_report_template.py  test_reviewer.py  test_rock_quality.py  test_sonic.py  test_steps.py  test_sw.py  test_tool_dispatch.py  test_uncertainty.py  test_v2_g.py  test_validators.py  test_vision_track.py  test_volumetrics.py  test_vsh.py
(+102 files in other folders)
